<resources>
    <string name="app_name">Jagrati</string>
    <string name="splash_attr">An Initiative by IIITDM Jabalpur</string>
    <string name="jagrati_logo">Jagrati logo</string>
    <string name="iiitdmj_logo">IIITDMJ Logo</string>
    <string name="welcome_to">Welcome to</string>
    <string name="family">Family</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup_page">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="forget_password">Forget Password</string>
    <string name="signup_email">Enter Email</string>
    <string name="signup_enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_otp">Enter code from mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_otp">Get OTP</string>
    <string name="n_nclasses">\n\nClasses</string>
    <string name="n_npast_attendance">\n\npast Attendance</string>
    <string name="n_nattendance">\n\nAttendance</string>
    <string name="we_lift_by_lifting_others">We rise by lifting others</string>
    <string name="attendance">Attendence\nand\nStudents</string>
    <string name="classes">Classes</string>
    <string name="info">Info</string>
    <string name="past_attendance">Students</string>
    <string name="Group">Group One</string>
    <string name="enter_group_name">Enter Group name</string>
    <string name="hint">Enter here</string>
    <string name="saveGroup">Save Group</string>
    <string name="enter_class_name">Enter Class name</string>
    <string name="saveClass">Save Class</string>
    <string name="Class">Class One</string>
    <string name="checker">checker</string>
    <string name="quiz">Quiz</string>
    <string name="addQuiz">Add Quiz</string>
    <string name="enter_quiz_detail">"Enter name and description "</string>
    <string name="hint_quizName">Enter Quiz Name here</string>
    <string name="hint_quizDescription">Enter Quiz Description here</string>
    <string name="addQues">Save Question</string>
    <string name="volunteer_login">Volunteer Login</string>
    <string name="add">add</string>
    <string name="there_must_be_something">theari \'aspdoifjn \'oidsa</string>
    <string name="log_out">Log Out</string>
    <string name="profile">profile</string>
    <string name="cancel">cancel</string>
    <string name="hint1">Group</string>
    <string name="you_are_about_to_sign_out_nare_you_sure">Sure about sign out??</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="submit">submit</string>
    <string name="your_profile">My Profile</string>
    <string name="draweropen">Drawer open</string>
    <string name="drawerclosed">Drawer Closed</string>
    <string name="title_activity_student_holder">StudentHolderActivity</string>
    <string name="tab_text_1">Past Attendance</string>
    <string name="tab_text_2">Student</string>
    <string name="tab_text_3">Attendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jg">\nJagrati</string>
    <string name="hint_quizTime">Enter Time (In minutes)</string>
    <string name="profile_dp">Profile DP</string>
    <string name="scheduling">Schedule</string>
    <string name="delete_popup_warning">Are you sure for deleting this ?</string>
    <string name="n">Study Material</string>
    <string name="class_pic">Class Pic</string>

    <string name="schedule">Schedule</string>
    <string name="books">Books</string>
    <string name="study_material">Study\nMaterial</string>
    <string name="title_activity_developer_page">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="developer">Developers</string>
    <string name="title_activity_coming_soon">ComingSoon</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="report_bug">Report Bug</string>
    <string name="enter_username">Enter Username</string>
</resources>