<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="30dp"
    android:elevation="16dp"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warning_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/delete_popup_warning"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
            android:id="@+id/confirm_delete"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/cancel_button"
            android:text="@string/yes"
            />

            <Button
                android:id="@+id/cancel_delete"
                android:background="@drawable/confirm_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                />

        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>
