<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:elevation="16dp"
        >

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/warning"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"

                android:gravity="center"
                android:text="@string/you_are_about_to_sign_out_nare_you_sure"
                android:textColor="#000000" />

            <Button
                android:id="@+id/cancel_signout"
                android:background="@drawable/confirm_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/confirml_signout"
                android:layout_gravity="center"
                android:background="@drawable/cancel_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/yes" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
